# Rag-Task

./: .env.example  .gitignore  ENDPOINT_TEST_REPORT.txt  README.md  agent.py  main.py  main2.py  pyproject.toml  quick_test.py  requirements.txt  store.db  store.db-shm  store.db-wal  test_agent.py  test_all_endpoints.py  test_questions.py  test_store.db
faiss_store/: faiss.index  metadata.pkl
src/: search.py
